# xquisito-crew

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  xquisito-crew.keystore
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DishItem.tsx  OrderCard.tsx  OrderCarousel.tsx
src/hooks/: useKitchenOrders.ts  usePrinters.ts  usePrinting.ts  useSocket.ts
src/pages/: Kitchen.tsx  Printers.tsx
src/services/: api.ts
src/utils/: deviceId.ts
