[package]
name = "xquisito-crew"
version = "1.0.0"
description = "Xquisito Crew — Kitchen Display System"
authors = ["Xquisito"]
edition = "2021"

[lib]
name = "xquisito_crew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(desktop)'.dependencies]
tauri-plugin-autostart = "2"
