[package]
name = "xquisito-crew"
version = "1.0.0"
description = "Xquisito Crew — Kitchen Display System"
authors = ["Xquisito"]
edition = "2021"

[lib]
name = "xquisito_crew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time", "sync"] }
local-ip-address = "0.6"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }
